--- a/index.html
+++ b/index.html
@@ -153,6 +153,18 @@
     </section>
     <!-- Publications  -->
 
+    <!-- Competitions -->
+    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="competitions">
+        <div class="container px-5">
+            <header>
+                <h2 id="competitions-subtitle"><i class="bi bi-file-competition-fill"></i>&nbsp;COMPETITIONS</h2>
+            </header>
+            <div class="main-body" id="competitions-md"></div>
+
+        </div>
+    </section>
+    <!-- Competitions  -->
+
     <!-- Awards -->
     <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="awards">
         <div class="container px-5">
@@ -164,6 +176,18 @@
         </div>
     </section>
     <!-- Awards -->
+
+    <!-- Patents -->
+    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="patents">
+        <div class="container px-5">
+            <header>
+                <h2 id="patents-subtitle"><i class="bi bi-patent-fill"></i>PATENTS </h2>
+            </header>
+            <div class="main-body" id="patent-md"></div>
+
+        </div>
+    </section>
+    <!-- Patents -->
 
 
     <!-- Footer-->
