--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="competitions">
         <div class="container px-5">
             <header>
-                <h2 id="competitions-subtitle"><i class="bi bi-file-competition-fill"></i>&nbsp;COMPETITIONS</h2>
+                <h2 id="competitions-subtitle"><i class="bi bi-file-award-fill"></i>&nbsp;COMPETITIONS</h2>
             </header>
             <div class="main-body" id="competitions-md"></div>
 
@@ -181,7 +181,7 @@
     <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="patents">
         <div class="container px-5">
             <header>
-                <h2 id="patents-subtitle"><i class="bi bi-patent-fill"></i>PATENTS </h2>
+                <h2 id="patents-subtitle"><i class="bi bi-award-fill"></i>PATENTS </h2>
             </header>
             <div class="main-body" id="patent-md"></div>
 
