--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             <header>
                 <h2 id="patents-subtitle"><i class="bi bi-award-fill"></i>PATENTS </h2>
             </header>
-            <div class="main-body" id="patent-md"></div>
+            <div class="main-body" id="patents-md"></div>
 
         </div>
     </section>
@@ -197,7 +197,7 @@
                 <div id="copyright-text" class="mb-2"></div>
                 <a id="github-link" href="https://github.com/senli1073">Github</a>
                 <span class="mx-1">&middot;</span>
-                <a id="license-link" href="https://github.com/senli1073/senli1073.github.io/blob/main/LICENSE">License</a>
+                <a id="license-link" href="https://github.com/ShijuanHuang/ShijuanHuang.github.io/blob/main/LICENSE">License</a>
             </div>
         </div>
     </footer>
