--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
                     <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#patents">PATENTS</a>
                     </li>
+                    <!-- 新增：语言切换 -->
+                    <li class="nav-item">
+                        <a class="nav-link me-lg-3" href="index_ch.html">中文</a>
+                    </li>
 
                 </ul>
             </div>
