--- a/index_ch.html
+++ b/index_ch.html
@@ -100,10 +100,10 @@
                         <a class="nav-link me-lg-3" href="#competitions">COMPETITIONS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#awards">AWARDS</a>
+                        <a class="nav-link me-lg-3" href="#awards_ch">荣誉称号</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#patents">PATENTS</a>
+                        <a class="nav-link me-lg-3" href="#patents"></a>
                     </li>
 
                 </ul>
@@ -166,12 +166,12 @@
     <!-- Competitions  -->
 
     <!-- Awards -->
-    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="awards">
+    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="awards_ch">
         <div class="container px-5">
             <header>
-                <h2 id="awards-subtitle"><i class="bi bi-award-fill"></i>AWARDS </h2>
+                <h2 id="awards-subtitle"><i class="bi bi-award-fill"></i>荣誉称号 </h2>
             </header>
-            <div class="main-body" id="awards-md"></div>
+            <div class="main-body" id="awards_ch-md"></div>
 
         </div>
     </section>
