--- a/index_ch.html
+++ b/index_ch.html
@@ -97,13 +97,17 @@
                         <a class="nav-link me-lg-3" href="#publications">PUBLICATIONS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#competitions">COMPETITIONS</a>
+                        <a class="nav-link me-lg-3" href="#competitions">学科竞赛</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#awards_ch">荣誉称号</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#patents"></a>
+                    </li>
+                    <!-- 新增：语言切换 -->
+                    <li class="nav-item">
+                        <a class="nav-link me-lg-3" href="index_ch.html">English</a>
                     </li>
 
                 </ul>
@@ -157,7 +161,7 @@
     <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="competitions">
         <div class="container px-5">
             <header>
-                <h2 id="competitions-subtitle"><i class="bi bi-trophy-fill"></i>COMPETITIONS </h2>
+                <h2 id="competitions-subtitle"><i class="bi bi-trophy-fill"></i>学科竞赛 </h2>
             </header>
             <div class="main-body" id="competitions-md"></div>
 
