--- a/index_ch.html
+++ b/index_ch.html
@@ -107,7 +107,7 @@
                     </li>
                     <!-- 新增：语言切换 -->
                     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="index_ch.html">English</a>
+                        <a class="nav-link me-lg-3" href="index.html">English</a>
                     </li>
 
                 </ul>
