--- a/index_ch.html
+++ b/index_ch.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 
 <head>
     <meta charset="utf-8" />
@@ -91,10 +91,10 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#page-top">HOME</a>
+                        <a class="nav-link me-lg-3" href="#page-top">首页</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#publications">PUBLICATIONS</a>
+                        <a class="nav-link me-lg-3" href="#publications">论文</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#competitions">学科竞赛</a>
@@ -103,7 +103,7 @@
                         <a class="nav-link me-lg-3" href="#awards_ch">荣誉称号</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#patents"></a>
+                        <a class="nav-link me-lg-3" href="#专利"></a>
                     </li>
                     <!-- 新增：语言切换 -->
                     <li class="nav-item">
@@ -149,7 +149,7 @@
     <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="publications">
         <div class="container px-5">
             <header>
-                <h2 id="publications-subtitle"><i class="bi bi-file-text-fill"></i>&nbsp;PUBLICATIONS</h2>
+                <h2 id="publications-subtitle"><i class="bi bi-file-text-fill"></i>&nbsp;论文</h2>
             </header>
             <div class="main-body" id="publications-md"></div>
 
@@ -185,7 +185,7 @@
     <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="patents">
         <div class="container px-5">
             <header>
-                <h2 id="patents-subtitle"><i class="bi bi-lightbulb-fill"></i>PATENTS </h2>
+                <h2 id="patents-subtitle"><i class="bi bi-lightbulb-fill"></i>专利 </h2>
             </header>
             <div class="main-body" id="patents-md"></div>
 
