--- a/index_ch.html
+++ b/index_ch.html
@@ -170,12 +170,12 @@
     <!-- Competitions  -->
 
     <!-- Awards -->
-    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="awards_ch">
+    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="awards">
         <div class="container px-5">
             <header>
                 <h2 id="awards-subtitle"><i class="bi bi-award-fill"></i>荣誉称号 </h2>
             </header>
-            <div class="main-body" id="awards_ch-md"></div>
+            <div class="main-body" id="awards-md"></div>
 
         </div>
     </section>
@@ -206,29 +206,6 @@
         </div>
     </footer>
 
-<!-- Override markdown loading for Chinese version -->
-<script>
-document.addEventListener('DOMContentLoaded', function () {
-    const mdFiles = {
-        'home-md': 'home_ch.md',
-        'publications-md': 'publications_ch.md',
-        'competitions-md': 'competitions_ch.md',
-        'awards_ch-md': 'awards_ch.md',     // 注意 ID 和文件名对应
-        'patents-md': 'patents_ch.md'
-    };
-
-    Object.entries(mdFiles).forEach(([id, file]) => {
-        fetch(`contents/${file}`)
-            .then(response => response.text())
-            .then(text => {
-                if (document.getElementById(id)) {
-                    document.getElementById(id).innerHTML = marked.parse(text);
-                }
-            })
-            .catch(err => console.error(`Failed to load ${file}`, err));
-    });
-});
-</script>
 
 </body>
 
