--- a/index_ch.html
+++ b/index_ch.html
@@ -52,7 +52,7 @@
                     ['\\[', '\\]']
                 ],
                 processEscapes: false,      // use \$ to produce a literal dollar sign
-                processEnvironments: true, // process \begin{xxx}...\end{xxx} outside math mode
+                processEnvironments: true, // process \begin{xxx}...\end{xxx} outse math mode
                 processRefs: true,         // process \ref{...} outside of math mode
                 digits: /^(?:[0-9]+(?:\{,\}[0-9]{3})*(?:\.[0-9]*)?|\.[0-9]+)/,    // pattern for recognizing numbers
                 tags: 'all',              // or 'ams' or 'all'
@@ -100,7 +100,7 @@
                         <a class="nav-link me-lg-3" href="#competitions">学科竞赛</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#awards_ch">荣誉称号</a>
+                        <a class="nav-link me-lg-3" href="#awards">荣誉称号</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#专利"></a>
