--- a/index_ch.html
+++ b/index_ch.html
@@ -52,7 +52,7 @@
                     ['\\[', '\\]']
                 ],
                 processEscapes: false,      // use \$ to produce a literal dollar sign
-                processEnvironments: true, // process \begin{xxx}...\end{xxx} outse math mode
+                processEnvironments: true, // process \begin{xxx}...\end{xxx} outside math mode
                 processRefs: true,         // process \ref{...} outside of math mode
                 digits: /^(?:[0-9]+(?:\{,\}[0-9]{3})*(?:\.[0-9]*)?|\.[0-9]+)/,    // pattern for recognizing numbers
                 tags: 'all',              // or 'ams' or 'all'
@@ -91,23 +91,23 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#page-top">首页</a>
+                        <a class="nav-link me-lg-3" href="#page-top">HOME</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#publications">论文</a>
+                        <a class="nav-link me-lg-3" href="#publications">PUBLICATIONS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#competitions">学科竞赛</a>
+                        <a class="nav-link me-lg-3" href="#competitions">COMPETITIONS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#awards">荣誉称号</a>
+                        <a class="nav-link me-lg-3" href="#awards">AWARDS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#专利"></a>
+                        <a class="nav-link me-lg-3" href="#patents">PATENTS</a>
                     </li>
                     <!-- 新增：语言切换 -->
                     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="index.html">English</a>
+                        <a class="nav-link me-lg-3" href="index_ch.html">中文</a>
                     </li>
 
                 </ul>
@@ -149,7 +149,7 @@
     <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="publications">
         <div class="container px-5">
             <header>
-                <h2 id="publications-subtitle"><i class="bi bi-file-text-fill"></i>&nbsp;论文</h2>
+                <h2 id="publications-subtitle"><i class="bi bi-file-text-fill"></i>&nbsp;PUBLICATIONS</h2>
             </header>
             <div class="main-body" id="publications-md"></div>
 
@@ -161,7 +161,7 @@
     <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="competitions">
         <div class="container px-5">
             <header>
-                <h2 id="competitions-subtitle"><i class="bi bi-trophy-fill"></i>学科竞赛 </h2>
+                <h2 id="competitions-subtitle"><i class="bi bi-trophy-fill"></i>COMPETITIONS </h2>
             </header>
             <div class="main-body" id="competitions-md"></div>
 
@@ -173,7 +173,7 @@
     <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="awards">
         <div class="container px-5">
             <header>
-                <h2 id="awards-subtitle"><i class="bi bi-award-fill"></i>荣誉称号 </h2>
+                <h2 id="awards-subtitle"><i class="bi bi-award-fill"></i>AWARDS </h2>
             </header>
             <div class="main-body" id="awards-md"></div>
 
@@ -185,7 +185,7 @@
     <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="patents">
         <div class="container px-5">
             <header>
-                <h2 id="patents-subtitle"><i class="bi bi-lightbulb-fill"></i>专利 </h2>
+                <h2 id="patents-subtitle"><i class="bi bi-lightbulb-fill"></i>PATENTS </h2>
             </header>
             <div class="main-body" id="patents-md"></div>
 
