--- a/index_ch.html
+++ b/index_ch.html
@@ -153,7 +153,7 @@
                 <h2 id="home-subtitle">个人简介</h2>
                 <!-- <span class="bi bi-list"></span> -->
             </header>
-            <div class="main-body" id="homech-md"></div>
+            <div class="main-body" id="home-md"></div>
         </div>
     </section>
     <!-- Home -->
@@ -164,7 +164,7 @@
             <header>
                 <h2 id="publications-subtitle"><i class="bi bi-file-text-fill"></i>&nbsp;学术成果</h2>
             </header>
-            <div class="main-body" id="publicationsch-md"></div>
+            <div class="main-body" id="publications-md"></div>
 
         </div>
     </section>
@@ -176,7 +176,7 @@
             <header>
                 <h2 id="competitions-subtitle"><i class="bi bi-trophy-fill"></i>学科竞赛 </h2>
             </header>
-            <div class="main-body" id="competitionsch-md"></div>
+            <div class="main-body" id="competitions-md"></div>
 
         </div>
     </section>
@@ -188,7 +188,7 @@
             <header>
                 <h2 id="awards-subtitle"><i class="bi bi-award-fill"></i>荣誉奖项 </h2>
             </header>
-            <div class="main-body" id="awardsch-md"></div>
+            <div class="main-body" id="awards-md"></div>
 
         </div>
     </section>
@@ -200,7 +200,7 @@
             <header>
                 <h2 id="patents-subtitle"><i class="bi bi-lightbulb-fill"></i>专利成果 </h2>
             </header>
-            <div class="main-body" id="patentsch-md"></div>
+            <div class="main-body" id="patents-md"></div>
 
         </div>
     </section>
